<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.ListPreference
        android:entries="@array/country_by_labels"
        android:entryValues="@array/country_by_values"
        android:key="@string/country_key"
        android:title="@string/country"
        android:summary="%s"/>

    <!--
    <androidx.preference.ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/order_by_label_key"
        android:title="@string/order_by_label"
        android:summary="%s"/>
-->

    <Preference
        android:key="@string/about_key"
        android:title="@string/about">
    </Preference>

    <Preference
        android:title="@string/open_source">
        <intent android:action="android.intent.action.VIEW"
            android:data="https://github.com/kishorebng/MyApps" />
    </Preference>

</androidx.preference.PreferenceScreen>